<resources>
    <string name="app_name">ArchaeologicalFieldwork</string>
    <string name="start_register">Register</string>
    <string name="start_login">Login</string>
    <string name="addfort_descrition">Descrition</string>
    <string name="addfort_add">Add</string>
    <string name="addfort_description">Description</string>
    <string name="addfort_name">Name</string>
    <string name="mainmenu_add">Add</string>
    <string name="addfort_location">Location</string>
    <string name="addfort_entertitleandimage">Please Enter a Title and an Image</string>
    <string name="select_image">Please Enter a Title</string>
    <string name="addfort_menu_cancel">Cancel</string>
    <string name="save_hillfort">Save Hillfort</string>
    <string name="add_images_to_post">Add Images to Post</string>
    <string name="welcome_to_hillforts">Welcome to Hillforts</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_return">Return</string>
    <string name="register_name">Name</string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="title_activity_navigationdrawertest">Navigationdrawertest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addford_visited">Visited</string>
    <string name="settings_password">Password</string>
    <string name="settings_name">Name</string>
    <string name="settings_logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="mainmenu_logout">Logout</string>
    <string name="remove_image">Remove Image</string>
    <string name="remove">Remove</string>
    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="posts">Posts</string>
    <string name="total_users">Total Users</string>
    <string name="total_posts">Total Posts</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="visited">Visited</string>
    <string name="total_visted">Total Visted</string>
    <string name="add_date">Add Date</string>
    <string name="deleteimages">No Images to Delete</string>
    <string name="LoggedOutuser">User Logged out</string>
    <string name="user_deleted">User Deleted</string>
    <string name="user_updated">User Updated</string>
    <string name="user_registered_already">User already registered</string>
    <string name="invalid_login_details">Invalid Login Details</string>
    <string name="map">Map</string>
    <string name="title_activity_hillfort_maps">HillfortMapsActivity</string>
    <string name="hillfort_image">Hillfort Image</string>
    <string name="hillfort_title">Hillfort Title</string>
    <string name="hillfort_description">hillfort_description</string>
    <string name="menu_search">Search</string>
    <string name="search_by_name">Search by Name</string>
    <string name="rating">Rating</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="favourite">Favourite</string>
    <string name="navigate">Navigate</string>
</resources>
